src/objects/Vendor__c.object
<CustomObject>
    <description>Vendors are the organizations whose services we engage for meetings</description>
    <fields>
        <fullName>Vendor_Address__c</fullName>
        <description>Number, Street Name, Office Number, etc. Complete mailing address</description>
        <label>Vendor Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Category__c</fullName>
        <description>Organizations whose services LF engages for meetings</description>
        <label>Vendor Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Video / Call Conference Services</fullName>
                </value>
                <value>
                    <fullName>Website Management</fullName>
                </value>
                <value>
                    <fullName>Record Management</fullName>
                </value>
                <value>
                    <fullName>Cloud Hosting Provider</fullName>
                </value>
                <value>
                    <fullName>Internet Domain Registrar / Web Hosting Services</fullName>
                </value>
                <value>
                    <fullName>Property and Casualty Insurance</fullName>
                </value>
                <value>
                    <fullName>Investment and Insurance Services</fullName>
                </value>
                <value>
                    <fullName>Investment Management</fullName>
                </value>
                <value>
                    <fullName>Marketing Services</fullName>
                </value>
                <value>
                    <fullName>Legal Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Email_Address__c</fullName>
        <label>Vendor Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_Phone_Number__c</fullName>
        <description>Vendor&apos;s Phone Number</description>
        <label>Vendor Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Vendor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Category__c</columns>
        <columns>Vendor_Email_Address__c</columns>
        <columns>Vendor_Phone_Number__c</columns>
        <columns>Vendor_Address__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>